重构: 更新 App、Engine 和 DefaultExtensionMessageDispatcher 类以优化构造函数和消息派发逻辑，增强系统的可维护性和稳定性。引入 EngineExtensionContext 以管理扩展的生命周期，简化扩展的消息处理和命令提交逻辑。同时，移除未使用的 ExtensionContext 类，提升代码可读性和项目结构的清晰度。